--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "devDependencies": {
     "postcss-nesting": "^13.0.1",
-    "vite": "^5.4.10"
+    "prettier": "3.3.3",
+    "vite": "^5.4.10",
+    "vite-plugin-minify": "^2.0.1"
+  },
+  "dependencies": {
+    "gsap": "file:gsap-bonus.tgz"
   }
 }
